@@ -76,6 +76,7 @@
 
 	      <child>
 		<widget class="GtkTreeView" id="meta_theme_treeview">
+                  <property name="height_request">350</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="headers_visible">False</property>
